<resources>
    <string name="app_name">JaEstic</string>
    <string name="welcomeToJaEstic">Welcome to JaEstic, feel free to order, Fot-li!</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="default_web_client_id_manual" translatable="false">942078009683-oma2vsfasofealpeuk0hv8qu2m2tsi01.apps.googleusercontent.com</string>
    <string name="methodEmail">Continue with email</string>
    <string name="detail">Details</string>
    <string name="login">Login</string>
    <string name="mail">Email</string>
    <string name="user_password">Password</string>
    <string name="txtRememberPassword">Forgot your password?</string>
    <string name="txtRegister">Not registered yet?</string>
    <string name="txtRegister2">Register</string>
    <string name="or">or</string>
    <string name="loginGoogle">Continue with Google</string>
    <string name="loginFacebook">Continue with Facebook</string>
    <string name="authFail">Authentication failed</string>
    <string name="authSuccess">Successfully Logged In</string>
    <string name="orders">Orders</string>
    <string name="cart_empty">Your cart is empty</string>
    <string name="addtocart">ADD TO CART</string>
    <string name="quantity">Quantity:</string>
    <string name="categoriesTitle">Categories</string>
    <string name="selectAll">Select All</string>
    <string name="buyNowCart">Buy now</string>
    <string name="totalPrice">Total</string>
    <string name="addedItemInCart">You have added the item into the cart!</string>
    <string name="cartDeleteEmptyToast">"Cart is empty"</string>
    <string name="cartDeleteListToast">"Cart is deleted"</string>
    <string name="cartDeleteItemToast">"Dish is deleted from the cart"</string>
    <string name="searchbar">Search</string>
    <string name="locationbar">Location</string>
    <string name="titleLastOrders">Last Orders</string>
    <string name="subTitleLastOrders">Click for more details</string>
    <string name="coin">$</string>
    <string name="boughtItemsSuccesfully">You have bought successfully!</string>
    <string name="commandTitle">Order</string>
    <string name="commandBody">Order:</string>
</resources>