<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/preloginbg"
    tools:context=".PreLoginScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="162dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="278dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/helvetica_rounded"
        android:text="@string/welcomeToJaEstic"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/helvetica_rounded"
        android:backgroundTint="@color/greyBlue"
        android:background="@drawable/rounded_button"
        android:text="@string/signIn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/greyBlue"
        app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/almostWhite"
        android:fontFamily="@font/helvetica_rounded"
        android:background="@drawable/rounded_button"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:textColor="@color/greyBlue"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>