<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:tag="Details"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DishDetailsFragment">

    <ImageView
        android:id="@+id/detailsCell"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/custom_border_cell_transparent"
        app:layout_constraintBottom_toTopOf="@+id/addtocart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titledetail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titledetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/helvetica_rounded"
        android:gravity="center"
        android:text="@string/detail"
        android:textColor="@color/greyBlue"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageOrderPlaceHolder"
        android:layout_width="228dp"
        android:layout_height="205dp"
        android:src="@drawable/junk_food"
        app:layout_constraintBottom_toBottomOf="@+id/detailsCell"
        app:layout_constraintEnd_toEndOf="@+id/detailsCell"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/detailsCell"
        app:layout_constraintTop_toTopOf="@+id/detailsCell"
        app:layout_constraintVertical_bias="0.122" />

    <TextView
        android:id="@+id/textOrderReference"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/helvetica_rounded"
        android:gravity="start"
        android:text="Product Name"
        android:textColor="@color/greyBlue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/detailsCell"
        app:layout_constraintEnd_toEndOf="@+id/detailsCell"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detailsCell"
        app:layout_constraintTop_toTopOf="@+id/detailsCell"
        app:layout_constraintVertical_bias="0.64" />

    <TextView
        android:id="@+id/textTotalQuantity"
        android:layout_width="272dp"
        android:layout_height="76dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/helvetica_rounded"
        android:text="Product description"
        android:textColor="@color/greyBlue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/detailsCell"
        app:layout_constraintEnd_toEndOf="@+id/detailsCell"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detailsCell"
        app:layout_constraintTop_toTopOf="@+id/detailsCell"
        app:layout_constraintVertical_bias="0.795" />

    <TextView
        android:id="@+id/orderDetailTotalPrice"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/helvetica_rounded"
        android:gravity="start"
        android:text="9,90€"
        android:textColor="@color/greyBlue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/detailsCell"
        app:layout_constraintEnd_toEndOf="@+id/detailsCell"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detailsCell"
        app:layout_constraintTop_toTopOf="@+id/detailsCell"
        app:layout_constraintVertical_bias="0.964" />

    <Button
        android:id="@+id/addtocart"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/helvetica_rounded"
        android:text="@string/addtocart"
        android:textAllCaps="false"
        android:textColor="@color/greyBlue"
        android:textSize="12sp"
        app:backgroundTint="@color/apricot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/greyBlue" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="112dp"
        android:layout_height="22dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/helvetica_rounded"
        android:text="@string/quantity"
        android:textColor="@color/greyBlue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/numQuantity"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/numQuantity"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/helvetica_rounded"
        android:gravity="center"
        android:background="@color/white"
        android:text="1"
        android:textColor="@color/greyBlue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/more"
        app:layout_constraintStart_toEndOf="@+id/less" />

    <Button
        android:id="@+id/more"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/right_rounded_button"
        android:fontFamily="@font/helvetica_rounded"
        android:text="+"
        android:textAllCaps="false"
        android:textColor="@color/greyBlue"
        android:textSize="16sp"
        app:backgroundTint="@color/apricot"
        app:iconSize="19dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numQuantity"
        app:strokeColor="@color/greyBlue"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/less"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/left_rounded_button"
        android:fontFamily="@font/helvetica_rounded"
        android:text="-"
        android:textAllCaps="false"
        android:textColor="@color/greyBlue"
        android:textSize="16sp"
        app:backgroundTint="@color/apricot"
        app:iconSize="19dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/numQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/greyBlue"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
